<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2024 Pointyware. Use of this software is governed by the GPL-3.0 license.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_background"
    android:clipToPadding="false"
    android:divider="@drawable/divider_about"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:showDividers="middle"
    android:weightSum="1"
    tools:context=".about.AboutActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/button_default">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/acc_about_logo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/about_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            tools:text="v0.0.0" />
    </FrameLayout>

    <Button
        android:id="@+id/about_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_feedback" />

    <Button
        android:id="@+id/about_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_changes" />

    <Button
        android:id="@+id/about_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/about_share" />

    <Button
        android:id="@+id/about_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/about_rating" />

</LinearLayout>
